add route for period close bounded context
